--- a/about.html
+++ b/about.html
@@ -134,7 +134,28 @@
                             <div class="accordion-body">
                                 <div class="img1">
                                     <p>
-                                        Catherine's artistic journey began as a child, where every crayon and sketch brought joy and excitement. Over the years, her passion for art evovled, leading her to experiment with various mediums and styles. Today, Catherine specializes in acrylic and oil paintings, charcoal artworks, pencil and color pencil drawings, portrait paintings, and more. Each piece she creates a reflection of her artisitc evolution and the emotions she wishes to convey.
+                                        Catherine L. Epe, born on December 31,1995, carries a profound love for art in her heart. Growing uo in the bustling city of Ormoc, Philippines, Catherine's earliest memories are adorned with sketches and vibrant splashes of color. As a child, she would spend hours immersed in her creative world, often sketching the beauty she saw in everything around her. <br>
+                                        <br>
+
+                                        Catherine's educational journey led her to pursue a Bachelor of Secondary Education majoring Mathematics. While Mathematics fascinated her, her heart remained tethered to the world of art. After completing her studies, she embraced her dual passions of teaching and artistry, finding a delicate balance between equations and brushstrokes. <br>
+                                        <br>
+
+                                        Teaching became more than a profession for Catherine; it became a canvas to inspire her students with the love of learning and creativity. She found joy in nurturing young minds, instilling in them the same wonder for art that she held. <br>
+                                        <br>
+
+                                        In her pursuit of artistic growth, Catherine joined the esteemed Teachers' Artists Group (TAG) in Ormoc City, a community of passionate educators sharing a love for artistic expression. This provided her with invaluable opportunities to collaborate, learn, and showcase her work to a wider audience. <br>
+                                        <br>
+
+                                        Her artistic journey blossomed through numerous exhibitions at esteemed venues like Robinsons Place Ormoc, SM, and Ormoc City Museum. These exhibitions allowed her to share her art with the world, eliciting awe and appreciation from art enthusiasts and collectors. <br>
+                                        <br>
+
+                                        Catherine's style is firmly rooted in realism, particularly in the genre of portraiture. She is captivated by the human form and endeavors to capture its essence and emotions in her works. Each stroke of her brush breathes life into her portraits, allowing viewers to connect with the subjects on a deeper level. <br>
+                                        <br>
+
+                                        For Catherine, art is not just about creating visually appealing pieces; it's a conduit for emotions, a means to express the beauty she percieves in the world. Her passion for art remains her driving force, propelling her to evolve and create, always reaching for new heights. <br>
+                                        <br>
+
+                                        As Catherine continues her journey, she aspires to touch more lives  with her art, leaving and endilible mark on the canvas of life. With every stroke, she brings her dreams and the dreams of those who admire her work closer to reality.
                                     </p>
                                 </div>
                             </div>
