--- a/faqs.html
+++ b/faqs.html
@@ -101,6 +101,159 @@
         <!-- --------- Frequently Ask Questions ------------ -->
 
 
+            <div class="about-page">
+                <div class="about-intro">
+                    <h3>Frequently Asked Questions (FAQs)</h3>
+                    <p>We answer common questions to help you better understand our art world. If you have any queries, this is the place to find simple and clear answers. Let's explore and learn together.</p>
+                    <div class="img2">
+                        <img src="images/About1.svg" class="img-fluid" alt="Image">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        About the Artist:
+                    </div>
+                    <div class="card-body">
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                    1. Who is Catherine, the artist behind "Alampat ni Cath" Visual Arts Shop?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                                    <div class="accordion-body">
+                                        <div class="img1">
+                                            <p>
+                                                Catherine is a passionate local artist based in the Philippines with a deep love for visual arts. Her journey began in her early years, and she has since honed her skills, specializing in acrylic and oil paintings, charcoal artworks, pencil and color pencil drawings, and portrait paintings.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                                    2. What inspires Catherine's artwork?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                                    <div class="accordion-body">
+                                        <div class="img1">
+                                            <p>
+                                                Catherine finds inspiration in everyday life, nature, emotions, and human connections. Her artisitic journey is a reflection of her experiences and her desire to capture the beauty and emotions that surround us.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        About the Artworks:
+                    </div>
+                    <div class="card-body">
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
+                                    1. What types of artworks are available at "Alampat ni Cath" Visual Art Shop?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
+                                    <div class="accordion-body">
+                                        <div class="img1">
+                                            <p>
+                                                "Alampat ni Cath" offers a diverse range of artworks, including acrylic and oil paintings, charcoal paintings, pencil and color pencil drawings, portrait paintings, and drawings. Each piece is carefully crafted and infused with Catherine's unique style and creativity.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                                    2. Can I request custom artwork or personalized portraits?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
+                                    <div class="accordion-body">
+                                        <div class="img1">
+                                            <p>
+                                                Yes, Catherine is open to creating custom artwork and personalized portraits based on your your preferences. Feel free to reach out to discuss your ideas, and Catherine will work closely with you to bring your vision to life.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        About the Shop:
+                    </div>
+                    <div class="card-body">
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="true" aria-controls="panelsStayOpen-collapseFive">
+                                    1. Can I purchase artworks directly from the website?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse show">
+                                    <div class="accordion-body">
+                                        <div class="img1">
+                                            <p>
+                                                Yes, you can browse and purchase artworks directly from the "Alampat ni Cath" Visual Arts Shop website. Simply select your artwork you desire, add it to your cart, and proceed to checkout for seamless shopping experience.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">
+                                    2. What payment methods are accepted in the online shop?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse">
+                                    <div class="accordion-body">
+                                        <div class="img1">
+                                            <p>
+                                                We currently accept major credit cards, debit cards, and Paypal for online purchases. Your payment details are secured and processed through a reliable payment gateway to ensure a safe transaction.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSeven" aria-expanded="false" aria-controls="panelsStayOpen-collapseSeven">
+                                    3. What is the shipping process for purchased artworks?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseSeven" class="accordion-collapse collapse">
+                                    <div class="accordion-body">
+                                        <div class="img1">
+                                            <p>
+                                                After completing your purchase, your artwork will be carefully packaged and shipped to your provided address. Shipping times and costs may vary based on your location. Rest assured, we strive to ensure a smooth and timely delivery of your chosen piece.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid para">
+                <p>
+                    These frequently asked questions are designed to provide clarity and address common inquiries about Catherine, her artworks, and the shopping experience ar "Alampat ni Cath" Visual Arts Shop. Feel free to reach out if you have additional questions or require further assistance!
+                </p>
+            </div>
 
 
         <!-- --------------- FOOTER ---------------- -->
