--- a/shop.html
+++ b/shop.html
@@ -111,6 +111,28 @@
             <p class="para">Welcome to our Shop! Here, you can discover and buy amazing artworks created by Catherine. Take a look around, find something you love, and make it yours. Let's dive into the artful world of "Alampat ni Cath". Happy browsing!</p>
         </div>
 
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner carou">
+                <div class="carousel-item active carou" data-bs-interval="10000">
+                    <img src="images/artist.svg" class="d-block w-100" alt="Image">
+                </div>
+                <div class="carousel-item carou" data-bs-interval="2000">
+                    <img src="images/time.svg" class="d-block w-100" alt="Image">
+                </div>
+                <div class="carousel-item carou">
+                    <img src="images/welcome.svg" class="d-block w-100" alt="Image">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
         <!-- ------------ categories ------------- -->
 
         <div class="categories">
