--- a/shop.html
+++ b/shop.html
@@ -22,6 +22,8 @@
 
     <!-- -------------- HOME PAGE ------------------------- -->
 
+
+
     <div class="container-fluid">
         <nav class="navbar navbar-light sticky-top">
             <div class="container-fluid">
@@ -96,10 +98,17 @@
                 </div>   
             </div>
         </nav>
-
-        <div>
-            
+        <div class="search-box">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <form class="d-flex" role="search" id="form2">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
         </div>
+
 
 
         <!-- -------------- Shop Page ---------------- -->
